--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://gibsoncodes.github.io/whosup",
+  "homepage": "https://gibsoncodes.github.io/whosup-deployed",
   "name": "whosup",
   "version": "0.1.0",
   "private": true,
